k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      name: http
      port: 9900
      targetPort: 9900
  type: ClusterIP
